2004-04-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.h,
	* src/SDCCicode.c (aggrToPtrDclType),
	* src/SDCCptropt.h,
	* src/SDCCptropt.c (ptrBaseRematSym, ptrPseudoSymSafe,
	ptrPseudoSymConvert),
	* src/pic/ralloc.c (regTypeNum),
	* src/pic16/ralloc.c (regTypeNum),
	* src/hc08/ralloc.c (regTypeNum),
	* src/ds390/ralloc.c (regTypeNum),
	* src/mcs51/ralloc.c (regTypeNum): check for dependancy hazards before
	creating pseudo symbols (fixed bugs #777768 and #933966)

2004-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* link/z80/lkmain.c (afile),
	* as/hc08/lkmain.c (afile),
	* as/mcs51/lkmain.c (afile): fix suggested by Maarten Brock to
	prevent a pointer problem when a filename has no directory and
	no extension specified.

2004-04-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* link/z80/lkmain.c (afile): allow periods in directory names
	* link/z80/lkmain.c (afile),
	* as/mcs51/lkmain.c (afile),
	* as/hc08/lkmain.c (afile): allow linker script file to have an
	extension other than ".lnk"
	* link/z80/lklex.c (getfid),
	* link/z80/lkmain.c (parse),
	* as/mcs51/lklex.c (getfid),
	* as/mcs51/lkmain.c (parse),
	* as/hc08/lklex.c (getfid),
	* as/hc08/lkmain.c (parse): Support comments in the linker script
	file on lines by themselves and after filenames

2004-04-20 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/link_hc08.dsp: Added as/hc08/lkelf.c to project.

2004-04-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/peeph-z80.def: removed some peephole rules that don't
	work with multibyte arithmetic (fixed bug #937126)
	* src/mcs51/peeph.def: fixed peephole rules 150-158 to apply only
	to registers and not global variables
	* src/SDCCicode.c (geniCodeAssign, ast2iCode, geniCodePostInc,
	geniCodePreInc, geniCodePostDec, geniCodePreDec,
	geniCodeLogicAndOr, geniCodeConditional): enforce strict lvalue
	checking for assignments not internally generated (fixed bug #931895)